2006-01-02  David Hampton  <hampton@employees.org>

	* src/engine/Transaction.c: Fix test inverted by commit 12231.

	* src/gnome-utils/Makefile.am
	* src/gnome-utils/gnc-tree-model-example-account.[ch]: Remove
	unused files.

	* src/gnome/glade/account.glade:
	* src/gnome/druid-hierarchy.c: Use a GtkListStore for the example
	account categories instead of layering a custom selection model on
	a custom example account model.  The code is a lot simpler and has
	additional sorting capability. Do some rework on the druid
	layout.

	* src/gnome-utils/gnc-tree-model-selection.[ch]: Correct function
	name.  Add a comment.

2006-01-02  Derek Atkine  <derek@ihtfp.com>

	* src/gnome-utils/gnc-tree-view-account.c:
	* src/gnome/gnc-plugin-page-budget.c:
	  need to #include gkeyfile.h if we don't have glib26.

2006-01-02  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-view.c: Use the right function to hide
	a tree column. Update a couple of debugging messages.

	* src/engine/gw-engine-spec.scm:
	* src/engine/gnc-commodity.[ch]: Initialize the qof instances in
	commodity namespaces.

